# ComputerGraphics

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: Window平台下配置必需的库.md
src/: CMakeLists.txt
src/app/: control.cpp
src/basic/: 3d.cpp  array.cpp  lineandshape.cpp  pixels.cpp  point.cpp
src/design/: Lollipop.cpp
src/event/: animation1.cpp  animation2.cpp  mouseclick.cpp
