function(singlefile type filename)
    add_executable(${filename} ${type}/${filename}.cpp)
    target_link_libraries(${filename} GLU GL glut GLEW)
endfunction()

singlefile(basic point)
singlefile(basic lineandshape)
singlefile(basic array)
#singlefile(basic simpleshaper)
singlefile(event animation1)
singlefile(event animation2)
singlefile(basic pixels)
#singlefile(textture)

#target_link_libraries(textture X11)